...
    
	private func configure() {
		view.backgroundColor = .white
		view.addSubview(scrollView)
		
		// for unit test
		view.accessibilityIdentifier = "bookDetailViewAccessIdentifier"
		
		let contentViewHeight = contentView.heightAnchor.constraint(greaterThanOrEqualTo: view.heightAnchor)
		contentViewHeight.priority = .defaultLow
		contentViewHeight.isActive = true
	}
	
...
